[tool.poetry]
name = "timebook"
version = "2.0.0"
description = "Track what you spend time on"
authors = ["Johan Vergeer <johanvergeer@gmail.com>", "Trevor Caira <trevor@caira.com>"]
license = "MIT"
repository = "https://github.com/johanvergeer/timebook"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"

[tool.poetry.plugins."console_scripts"]
"t" = "timebook.cmdline:run_from_cmdline"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


